--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -23,8 +23,12 @@
 
 .title-text{
     font-size: 30px;
-    color: rgba(255, 255, 255, 0.7);
-    text-shadow: 0 0 15px #03bcf4;
+    color: rgba(255, 255, 255);
+    text-shadow: 0 0 10px #03bcf4,
+        0 0 20px #03bcf4,
+        0 0 40px #03bcf4,
+        0 0 80px #03bcf4,
+        0 0 160px #03bcf4;
 }
 
 .list-items{
