--- a/src/Pages/OrgBy/OrgBy.css
+++ b/src/Pages/OrgBy/OrgBy.css
@@ -1,5 +1,95 @@
 .orgby-container{
-    height: 100vh;
+    padding: 50px;
+    background: linear-gradient(-40deg, #0081bd 0%, #25517c 50%, #262626 50%, #607d8b 100%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-family: sans-serif;
+    text-align: center;
+    color: white;
+    animation: hueshift 5s linear infinite;
+    scroll-snap-align: start;
+}
+
+.blur-container{
+    background-color: rgba(0, 0, 0, 0.5);
+    -webkit-backdrop-filter: blur(30px);
+    backdrop-filter: blur(30px);
+    padding: 150px 50px;
+    border-radius: 10px;
     width: 100%;
-    background-color: grey;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    animation: anibounce infinite 1.5s;
+}
+
+.rmdec-text{
+    font-size: 50px;
+    margin-bottom: 4px;
+}
+
+.rmdec-mt{
+    font-weight: 100;
+    font-size: 25px;
+    color: rgb(188, 188, 188);
+    margin-bottom: 80px;
+}
+
+.presents{
+    color: white;
+    font-weight: bolder;
+    color: rgb(66, 66, 66);
+    display: none;
+}
+
+.rmdec-subtext{
+    margin-top: 80px;
+    font-size: 50px;
+
+}
+
+@keyframes hueshift {
+    0%{
+        filter: hue-rotate(0deg);
+    }
+    100%{
+        filter: hue-rotate(360deg);
+    }
+}
+
+@media screen and (max-width: 600px){
+    .orgby-container{
+        font-size: 10px;
+    }
+
+    .rmdec-text{
+        font-size: 10px;
+        margin-bottom: 4px;
+    }
+    
+    .rmdec-mt{
+        font-weight: 100;
+        font-size: 15px;
+        margin-bottom: 50px;
+    }
+    
+    .presents{
+        color: rgb(224, 224, 224);
+        font-weight: bolder;
+        display: block;
+    }
+    
+    .rmdec-subtext{
+        margin-top: 50px;
+        font-size: 15px;
+        width: 100%;
+    }
+
+    .blur-container{
+        padding: 50px;
+    }
+    
 }
