--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -133,7 +133,7 @@ nav{
 .anc-element{
     font-size: 1rem;
     text-decoration: none;
-    color: black;
+    color: white;
     transition: .4s all ease-in-out;
 }
 
